# MyEngine2D

./: CMakeLists.txt  README.md  main.cpp
include/Core/: Application.h  Time.h  Window.h
include/ECS/: Component.h  Entity.h  System.h
include/Renderer/: Renderer.h  Texture.h
scr/: main.cpp
src/Core/: Application.cpp
src/ECS/: System.cpp
src/Renderer/: Texture.cpp
